Fix spacing between notices and tabs
[MAILPOET-3284]

--- a/assets/css/src/components/_tabs.scss
+++ b/assets/css/src/components/_tabs.scss
@@ -9,8 +9,10 @@
 
   .notice ~ &,
   .notice ~ div > &,
+  .notice ~ .wrap &,
   .error ~ &,
   .error ~ div > &,
+  .error ~ .wrap &,
   .mailpoet-subscribers-in-plan ~ & {
     top: 0 !important;
   }
